assets/css/media.css
/* ... */
@media (max-width: 1399px) { 
.certi-doc-item {
    border-radius: 10px;
}
.doc-preview {
    min-height: 120px;
}
.certi-doc-wrap {
    gap: 8px;
}
.select_dropdown {
    font-size: 12px;
    padding: 7px 33px 8px 18px;
}
.fleet-mana-bx-wp .fleet-mana-ft-cat{
    padding: 8px 12px;
    width: auto;
    height: auto;
}
.fleet-mana-ft-img{
    width: 28%;
    border-radius: 10px !important;
}
.fleet-mana-ft-img-txt {
    width: calc(100% - 110px);
}
.flet-des-img-bx img {
    border-radius: 10px !important;
}

h1,.h1 { font-size:30px; }
h2,.h2 { font-size:22px; }
h3,.h3 { font-size:20px; }
h4,.h4 { font-size:16px; }
h5,.h5 { font-size:16px; }  
h6,.h6 { font-size:14px; }

.fs-14{font-size:12px !important;}
.fs-16{font-size:14px !important;}
.fs-18{font-size:15px !important;}
.fs-20{font-size:17px !important;}
.fs-22{font-size:19px !important;}
.fs-26{font-size:22px !important;}

/*=== Login ===*/

.logo-form-wid{max-width:410px;}
.login-cform-main{height:calc(100% - 105px);}
.login-sec-logo img{max-width:331px;}
.btn{min-width:160px;}
.profile-preview{width:110px;height:110px;}
.profile-preview .imageUpload-review{width:110px;height:110px;}

/*== Dashboard ==*/

.content-wrapper{padding-left:15px;padding-right:15px;margin-left:calc(210px + 15px);}

.notification-main{min-width:400px;}


/* offcanvas start */

.offcanvas-title{font-size:18px;}

/* offcanvas end */


.tm-de-et-wrap .btn{padding:7px 10px;}
.td-detail-box-tm-card-wp .td-details-tdt{font-size:14px!important;}
.btn.btn-lg-cm{min-width:150px;}
.wh60{width:40px;height:40px;}
.wh60-txt{width:calc(100% - 40px);}


.td-details-box-main .td-details-box-wp .td-details-box.td-details-box-btn .red-btn1{padding:4px 5px;font-size:10px!important;}
.td-details-box-main .td-details-box-wp .td-details-box.td-details-box-btn{padding:10px 6px;padding-right:85px;}

.btn.btn-outline-bs.btn-outline-lg{padding:8px 10px;}

/* fleet details */
.cert-doc-hist-main .custom-table-main th,
.cert-doc-hist-main .custom-table-main td{
    white-space: nowrap;
}
}


@media(max-width:1299px) {


h1,.h1 { font-size:28px; }
h2,.h2 { font-size:22px; }
h3,.h3 { font-size:20px; }
h4,.h4 { font-size:16px; }
h5,.h5 { font-size:16px; }  
h6,.h6 { font-size:14px; }


.fs-14{font-size:12px !important;}
.fs-16{font-size:13px !important;}
.fs-18{font-size:14px !important;}
.fs-20{font-size:16px !important;}
.fs-22{font-size:18px !important;}
.fs-26{font-size:21px !important;}


/*=== Login ===*/

.logo-form-wid{max-width:390px;}
.login-sec-logo img{max-width:311px;}


/*=== team management empty =====*/

.mjc-wrap{font-size:13px!important;}


}



@media (max-width: 1199.98px) { 
.offcanvas-btn-wrap .btn{
    margin: 10px 0 16px !important;
}
.driverstatusmodal .radio-checkbox-flagg-rev-fgtsrw-label::after {
    width: 12px;
    height: 12px;
}
.driverstatusmodal .radio-checkbox-flagg-rev-fgtsrw-label::before {
    width: 18px;
    height: 18px;
}
.driverstatusmodal .reason-wrap .radio-checkbox-flagg-rev-fgtsrw-label::before {
    left: 10px;
}
.driverstatusmodal .reason-wrap .radio-checkbox-flagg-rev-fgtsrw-label::after {
    left: 13px;
}
.dot {
    width: 12px;
    height: 12px;
}
.status-legend .legend-item {
    margin-right: 10px;
}
.certi-doc-overlay {
    padding: 10px 12px;
}
.certi-doc-overlay .certi-doc-name {
    font-size: 11px !important;
}
.attachmentpill {
    padding: 8px 14px;
}
.w-240 {
    width: 160px;
}
.assign-opp {
    margin-top: 0;
}
.fleet-mana-bx-wp .fleet-mana-ft-cat {
    font-size: 10px !important;
}

.fleet-mana-bx-wp .fleet-mana-ft-cat {
    position: absolute;
    right: 12px;
    top: 15px;
}

.fleet-mana-ft-img-txt {
    width: 100%;
    flex-direction: column;
    align-items: start !important;
    gap: 12px 0;
}

.fleet-mana-bx-img-txt {
    position: relative;
}

.fleet-mana-ft-img {
    width: 20%;
}
.wh-55-txt {
    width: 100%;
    padding: 0;
}



h1,.h1 { font-size:26px; }
h2,.h2 { font-size:22px; }
h3,.h3 { font-size:20px; }
h4,.h4 { font-size:16px; }
h5,.h5 { font-size:16px; }  
h6,.h6 { font-size:14px; }


.fs-14{font-size:12px !important;}
.fs-16{font-size:13px !important;}
.fs-18{font-size:14px !important;}
.fs-20{font-size:15px !important;}
.fs-22{font-size:17px !important;}
.fs-26{font-size:20px !important;}



.form-control.border::placeholder { font-size: 14px;}
.form-control.border::-moz-placeholder { font-size: 14px;}
.form-control.border:-ms-input-placeholder { font-size: 14px;}
.form-control.border::-webkit-input-placeholder { font-size: 14px;}
.form-control.border::-o-input-placeholder { font-size: 14px;}


/*=== Login ===*/

.login-sec-left-wrap-m{border-radius:20px;}
.btn{border-radius:40px;}
.setacc-form-la label.form-label{font-size:12px;}
.profile-preview{width:100px;height:100px;}
.profile-preview .imageUpload-review{width:100px;height:100px;}

/*== Dashboard ==*/

.box-count-icon{width:50px;height:50px;}
.box-count-head{font-size:20px;}
.box-count-txt-wrap{width:calc(100% - 50px);}



/*=== Post New Job ====*/

.loc-de-box-wrapl .loc-de-stet-col{width:100%;}
.loc-de-box-wrapl .loc-de-hr-col{width:100%;margin:15px 0px;}


.assi-fdriver-ww{margin-bottom:15px;}
.assi-fdriver-ww:last-child{margin-bottom:0px;}

.td-details-box-main .td-details-box-wp .td-details-box.td-details-box-btn{padding-right:6px;}
.td-details-box-main .td-details-box-wp .td-details-box.td-details-box-btn .red-btn1{right:0px;left:0px;top:0px;position:relative;transform:none;margin-top:10px;}


.assi-fdriver-ant-box .assi-fdriver-ww{width:42%;}
.assi-fdriver-ant-box .assi-fdriver-ant-ww{width:16%;}

/* job management flow */
.btn-underline {
    text-underline-offset: 2px;
    font-size: 12px;
}

}
/* ... */

